--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,12 @@ name: test
 on: push
 jobs:
   test:
-    runs-on: ubuntu-ubuntu-22.04
-    container: keita/ubuntu24.04-ros2:latest 
+    runs-on: ubuntu-24.04
+    container: ryuichiueda/ubuntu22.04-ros2:latest 
     steps: 
     - uses: actions/checkout@v2
     - name: build and test
       run: |
-        raync -av ./ /root/ros2_ws/src/mypkg/
+        rsync -av ./ /root/ros2_ws/src/mypkg/
         cd /root/ros2_ws 
         bash -xv ./src/mypkg/test/test.bash /root
