--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,16 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-24.04
-    container: ryuichiueda/ubuntu22.04-ros2:latest 
-    steps: 
+    container: ryuichiueda/ubuntu22.04-ros2:latest
+    steps:
     - uses: actions/checkout@v2
-    - name: build and test
+    - name: build
       run: |
         rsync -av ./ /root/ros2_ws/src/mypkg/
-        cd /root/ros2_ws 
-        bash -xv ./src/mypkg/test/test.bash /root
+        cd /root/ros2_ws
+        colcon build
+        source install/setup.bash
+    - name: run test
+      run: |
+        cd /root/ros2_ws
+        bash -xv ./src/mypkg/test/test_monitor.bash
