--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,9 @@ jobs:
         rsync -av ./ /root/ros2_ws/src/mypkg/
         cd /root/ros2_ws
         colcon build
-        source install/setup.bash
     - name: run test
       run: |
+        source /opt/ros/jazzy/setup.bash
         cd /root/ros2_ws
-        bash -xv ./src/mypkg/test/test_monitor.bash
+        source install/setup.bash
+        bash ./src/mypkg/test/test_monitor.bash
