--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,16 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: build
+      shell: bash
       run: |
         rsync -av ./ /root/ros2_ws/src/mypkg/
         cd /root/ros2_ws
+        source /opt/ros/humble/setup.bash
         colcon build
     - name: run test
       shell: bash
       run: |
-        source /opt/ros/jazzy/setup.bash
+        source /opt/ros/humble/setup.bash
         cd /root/ros2_ws
         source install/setup.bash
         bash ./src/mypkg/test/test_monitor.bash
